[project]
name = "pubmedfetcher"
version = "0.1.0"
description = "Fetch PubMed papers with non-acedamic authors"
authors = [
    {name = "Navneet170904",email = "navneetyadav1704@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.31.0"
typer = "^0.9.0"
pandas = "^2.0.3"

[tool.poetry.scripts]
get-papers-list = "pubmedfetcher.cli:app"


[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
